--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-testing-library": "^8.0.1",
     "regression": "^2.0.1",
     "swagger-editor": "^3.16.0",
     "swagger-ui-react": "^3.47.1",
@@ -49,6 +50,8 @@
     ]
   },
   "devDependencies": {
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "gh-pages": "^3.1.0"
   }
 }
